y.output
Terminals unused in grammar

   DIGITO
   LETRA
   CHAR_ESP
   COMMENT
   PYC
   PTO
   ENDIF
   INT
   FLOAT
   STRING
   MENOS_UNARIO


Gramática

    0 $accept: programa $end

    1 programa: program

    2 program: sentencia
    3        | program sentencia

    4 sentencia: asignacion_s
    5          | asignacion_m
    6          | decision
    7          | iteracion
    8          | printear
    9          | obtain
   10          | declaracion
   11          | cteNombre

   12 asignacion_s: ID OP_ASIG expresion
   13             | ID OP_ASIG CTE_STRING

   14 asignacion_m: C_A lista_var C_C OP_ASIG C_A lista_exp C_C

   15 lista_var: lista_var COMA ID
   16          | ID

   17 lista_exp: lista_exp COMA var
   18          | var

   19 var: ID
   20    | CTE_ENT
   21    | CTE_REAL
   22    | CTE_STRING

   23 decision: IF P_A condicion P_C L_A sentencia L_C ELSE L_A sentencia L_C
   24         | IF P_A condicion P_C L_A sentencia L_C

   25 condicion: ID OP_MAX CTE_ENT
   26          | ID OP_MAX ID
   27          | ID OP_MIN CTE_ENT
   28          | ID OP_MIN ID
   29          | ID OP_MAXEQ CTE_ENT
   30          | ID OP_MAXEQ ID
   31          | ID OP_MINEQ CTE_ENT
   32          | ID OP_MINEQ ID
   33          | ID OP_EQ CTE_ENT
   34          | ID OP_EQ ID
   35          | ID OP_NEQ CTE_ENT
   36          | ID OP_NEQ ID
   37          | NOT ID
   38          | condicion AND condicion
   39          | condicion OR condicion

   40 iteracion: REPEAT sentencia UNTIL condicion

   41 printear: PRINT CTE_STRING
   42         | PRINT ID

   43 obtain: READ ID

   44 declaracion: VAR DPTO ENDVAR

   45 cteNombre: CONST ID EQ CTE_ENT
   46          | CONST ID EQ CTE_STRING

   47 expresion: expresion OP_SUMA termino
   48          | expresion OP_RESTA termino
   49          | termino

   50 termino: termino OP_MULT factor
   51        | termino OP_DIV factor
   52        | factor

   53 factor: ID
   54       | CTE_ENT
   55       | CTE_REAL
   56       | P_A expresion P_C


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DIGITO (258)
LETRA (259)
CHAR_ESP (260)
COMMENT (261)
ID (262) 12 13 15 16 19 25 26 27 28 29 30 31 32 33 34 35 36 37 42 43
    45 46 53
CTE_STRING (263) 13 22 41 46
CTE_ENT (264) 20 25 27 29 31 33 35 45 54
CTE_REAL (265) 21 55
P_A (266) 23 24 56
P_C (267) 23 24 56
C_A (268) 14
C_C (269) 14
L_A (270) 23 24
L_C (271) 23 24
PYC (272)
PTO (273)
DPTO (274) 44
COMA (275) 15 17
OP_MAX (276) 25 26
OP_MAXEQ (277) 29 30
OP_MIN (278) 27 28
OP_MINEQ (279) 31 32
OP_NEQ (280) 35 36
OP_EQ (281) 33 34
EQ (282) 45 46
IF (283) 23 24
ELSE (284) 23
ENDIF (285)
VAR (286) 44
ENDVAR (287) 44
REPEAT (288) 40
UNTIL (289) 40
PRINT (290) 41 42
READ (291) 43
CONST (292) 45 46
INT (293)
FLOAT (294)
STRING (295)
MENOS_UNARIO (296)
OP_ASIG (297) 12 13 14
OP_SUMA (298) 47
OP_RESTA (299) 48
OP_MULT (300) 50
OP_DIV (301) 51
AND (302) 38
OR (303) 39
NOT (304) 37


No terminales con las reglas donde aparecen

$accept (50)
    en la izquierda: 0
programa (51)
    en la izquierda: 1, en la derecha: 0
program (52)
    en la izquierda: 2 3, en la derecha: 1 3
sentencia (53)
    en la izquierda: 4 5 6 7 8 9 10 11, en la derecha: 2 3 23 24 40
asignacion_s (54)
    en la izquierda: 12 13, en la derecha: 4
asignacion_m (55)
    en la izquierda: 14, en la derecha: 5
lista_var (56)
    en la izquierda: 15 16, en la derecha: 14 15
lista_exp (57)
    en la izquierda: 17 18, en la derecha: 14 17
var (58)
    en la izquierda: 19 20 21 22, en la derecha: 17 18
decision (59)
    en la izquierda: 23 24, en la derecha: 6
condicion (60)
    en la izquierda: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39,
    en la derecha: 23 24 38 39 40
iteracion (61)
    en la izquierda: 40, en la derecha: 7
printear (62)
    en la izquierda: 41 42, en la derecha: 8
obtain (63)
    en la izquierda: 43, en la derecha: 9
declaracion (64)
    en la izquierda: 44, en la derecha: 10
cteNombre (65)
    en la izquierda: 45 46, en la derecha: 11
expresion (66)
    en la izquierda: 47 48 49, en la derecha: 12 47 48 56
termino (67)
    en la izquierda: 50 51 52, en la derecha: 47 48 49 50 51
factor (68)
    en la izquierda: 53 54 55 56, en la derecha: 50 51 52


estado 0

    0 $accept: . programa $end

    ID      desplazar e ir al estado 1
    C_A     desplazar e ir al estado 2
    IF      desplazar e ir al estado 3
    VAR     desplazar e ir al estado 4
    REPEAT  desplazar e ir al estado 5
    PRINT   desplazar e ir al estado 6
    READ    desplazar e ir al estado 7
    CONST   desplazar e ir al estado 8

    programa      ir al estado 9
    program       ir al estado 10
    sentencia     ir al estado 11
    asignacion_s  ir al estado 12
    asignacion_m  ir al estado 13
    decision      ir al estado 14
    iteracion     ir al estado 15
    printear      ir al estado 16
    obtain        ir al estado 17
    declaracion   ir al estado 18
    cteNombre     ir al estado 19


estado 1

   12 asignacion_s: ID . OP_ASIG expresion
   13             | ID . OP_ASIG CTE_STRING

    OP_ASIG  desplazar e ir al estado 20


estado 2

   14 asignacion_m: C_A . lista_var C_C OP_ASIG C_A lista_exp C_C

    ID  desplazar e ir al estado 21

    lista_var  ir al estado 22


estado 3

   23 decision: IF . P_A condicion P_C L_A sentencia L_C ELSE L_A sentencia L_C
   24         | IF . P_A condicion P_C L_A sentencia L_C

    P_A  desplazar e ir al estado 23


estado 4

   44 declaracion: VAR . DPTO ENDVAR

    DPTO  desplazar e ir al estado 24


estado 5

   40 iteracion: REPEAT . sentencia UNTIL condicion

    ID      desplazar e ir al estado 1
    C_A     desplazar e ir al estado 2
    IF      desplazar e ir al estado 3
    VAR     desplazar e ir al estado 4
    REPEAT  desplazar e ir al estado 5
    PRINT   desplazar e ir al estado 6
    READ    desplazar e ir al estado 7
    CONST   desplazar e ir al estado 8

    sentencia     ir al estado 25
    asignacion_s  ir al estado 12
    asignacion_m  ir al estado 13
    decision      ir al estado 14
    iteracion     ir al estado 15
    printear      ir al estado 16
    obtain        ir al estado 17
    declaracion   ir al estado 18
    cteNombre     ir al estado 19


estado 6

   41 printear: PRINT . CTE_STRING
   42         | PRINT . ID

    ID          desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27


estado 7

   43 obtain: READ . ID

    ID  desplazar e ir al estado 28


estado 8

   45 cteNombre: CONST . ID EQ CTE_ENT
   46          | CONST . ID EQ CTE_STRING

    ID  desplazar e ir al estado 29


estado 9

    0 $accept: programa . $end

    $end  desplazar e ir al estado 30


estado 10

    1 programa: program .
    3 program: program . sentencia

    ID      desplazar e ir al estado 1
    C_A     desplazar e ir al estado 2
    IF      desplazar e ir al estado 3
    VAR     desplazar e ir al estado 4
    REPEAT  desplazar e ir al estado 5
    PRINT   desplazar e ir al estado 6
    READ    desplazar e ir al estado 7
    CONST   desplazar e ir al estado 8

    $default  reduce usando la regla 1 (programa)

    sentencia     ir al estado 31
    asignacion_s  ir al estado 12
    asignacion_m  ir al estado 13
    decision      ir al estado 14
    iteracion     ir al estado 15
    printear      ir al estado 16
    obtain        ir al estado 17
    declaracion   ir al estado 18
    cteNombre     ir al estado 19


estado 11

    2 program: sentencia .

    $default  reduce usando la regla 2 (program)


estado 12

    4 sentencia: asignacion_s .

    $default  reduce usando la regla 4 (sentencia)


estado 13

    5 sentencia: asignacion_m .

    $default  reduce usando la regla 5 (sentencia)


estado 14

    6 sentencia: decision .

    $default  reduce usando la regla 6 (sentencia)


estado 15

    7 sentencia: iteracion .

    $default  reduce usando la regla 7 (sentencia)


estado 16

    8 sentencia: printear .

    $default  reduce usando la regla 8 (sentencia)


estado 17

    9 sentencia: obtain .

    $default  reduce usando la regla 9 (sentencia)


estado 18

   10 sentencia: declaracion .

    $default  reduce usando la regla 10 (sentencia)


estado 19

   11 sentencia: cteNombre .

    $default  reduce usando la regla 11 (sentencia)


estado 20

   12 asignacion_s: ID OP_ASIG . expresion
   13             | ID OP_ASIG . CTE_STRING

    ID          desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33
    CTE_ENT     desplazar e ir al estado 34
    CTE_REAL    desplazar e ir al estado 35
    P_A         desplazar e ir al estado 36

    expresion  ir al estado 37
    termino    ir al estado 38
    factor     ir al estado 39


estado 21

   16 lista_var: ID .

    $default  reduce usando la regla 16 (lista_var)


estado 22

   14 asignacion_m: C_A lista_var . C_C OP_ASIG C_A lista_exp C_C
   15 lista_var: lista_var . COMA ID

    C_C   desplazar e ir al estado 40
    COMA  desplazar e ir al estado 41


estado 23

   23 decision: IF P_A . condicion P_C L_A sentencia L_C ELSE L_A sentencia L_C
   24         | IF P_A . condicion P_C L_A sentencia L_C

    ID   desplazar e ir al estado 42
    NOT  desplazar e ir al estado 43

    condicion  ir al estado 44


estado 24

   44 declaracion: VAR DPTO . ENDVAR

    ENDVAR  desplazar e ir al estado 45


estado 25

   40 iteracion: REPEAT sentencia . UNTIL condicion

    UNTIL  desplazar e ir al estado 46


estado 26

   42 printear: PRINT ID .

    $default  reduce usando la regla 42 (printear)


estado 27

   41 printear: PRINT CTE_STRING .

    $default  reduce usando la regla 41 (printear)


estado 28

   43 obtain: READ ID .

    $default  reduce usando la regla 43 (obtain)


estado 29

   45 cteNombre: CONST ID . EQ CTE_ENT
   46          | CONST ID . EQ CTE_STRING

    EQ  desplazar e ir al estado 47


estado 30

    0 $accept: programa $end .

    $default  aceptar


estado 31

    3 program: program sentencia .

    $default  reduce usando la regla 3 (program)


estado 32

   53 factor: ID .

    $default  reduce usando la regla 53 (factor)


estado 33

   13 asignacion_s: ID OP_ASIG CTE_STRING .

    $default  reduce usando la regla 13 (asignacion_s)


estado 34

   54 factor: CTE_ENT .

    $default  reduce usando la regla 54 (factor)


estado 35

   55 factor: CTE_REAL .

    $default  reduce usando la regla 55 (factor)


estado 36

   56 factor: P_A . expresion P_C

    ID        desplazar e ir al estado 32
    CTE_ENT   desplazar e ir al estado 34
    CTE_REAL  desplazar e ir al estado 35
    P_A       desplazar e ir al estado 36

    expresion  ir al estado 48
    termino    ir al estado 38
    factor     ir al estado 39


estado 37

   12 asignacion_s: ID OP_ASIG expresion .
   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 49
    OP_RESTA  desplazar e ir al estado 50

    $default  reduce usando la regla 12 (asignacion_s)


estado 38

   49 expresion: termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 51
    OP_DIV   desplazar e ir al estado 52

    $default  reduce usando la regla 49 (expresion)


estado 39

   52 termino: factor .

    $default  reduce usando la regla 52 (termino)


estado 40

   14 asignacion_m: C_A lista_var C_C . OP_ASIG C_A lista_exp C_C

    OP_ASIG  desplazar e ir al estado 53


estado 41

   15 lista_var: lista_var COMA . ID

    ID  desplazar e ir al estado 54


estado 42

   25 condicion: ID . OP_MAX CTE_ENT
   26          | ID . OP_MAX ID
   27          | ID . OP_MIN CTE_ENT
   28          | ID . OP_MIN ID
   29          | ID . OP_MAXEQ CTE_ENT
   30          | ID . OP_MAXEQ ID
   31          | ID . OP_MINEQ CTE_ENT
   32          | ID . OP_MINEQ ID
   33          | ID . OP_EQ CTE_ENT
   34          | ID . OP_EQ ID
   35          | ID . OP_NEQ CTE_ENT
   36          | ID . OP_NEQ ID

    OP_MAX    desplazar e ir al estado 55
    OP_MAXEQ  desplazar e ir al estado 56
    OP_MIN    desplazar e ir al estado 57
    OP_MINEQ  desplazar e ir al estado 58
    OP_NEQ    desplazar e ir al estado 59
    OP_EQ     desplazar e ir al estado 60


estado 43

   37 condicion: NOT . ID

    ID  desplazar e ir al estado 61


estado 44

   23 decision: IF P_A condicion . P_C L_A sentencia L_C ELSE L_A sentencia L_C
   24         | IF P_A condicion . P_C L_A sentencia L_C
   38 condicion: condicion . AND condicion
   39          | condicion . OR condicion

    P_C  desplazar e ir al estado 62
    AND  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64


estado 45

   44 declaracion: VAR DPTO ENDVAR .

    $default  reduce usando la regla 44 (declaracion)


estado 46

   40 iteracion: REPEAT sentencia UNTIL . condicion

    ID   desplazar e ir al estado 42
    NOT  desplazar e ir al estado 43

    condicion  ir al estado 65


estado 47

   45 cteNombre: CONST ID EQ . CTE_ENT
   46          | CONST ID EQ . CTE_STRING

    CTE_STRING  desplazar e ir al estado 66
    CTE_ENT     desplazar e ir al estado 67


estado 48

   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino
   56 factor: P_A expresion . P_C

    P_C       desplazar e ir al estado 68
    OP_SUMA   desplazar e ir al estado 49
    OP_RESTA  desplazar e ir al estado 50


estado 49

   47 expresion: expresion OP_SUMA . termino

    ID        desplazar e ir al estado 32
    CTE_ENT   desplazar e ir al estado 34
    CTE_REAL  desplazar e ir al estado 35
    P_A       desplazar e ir al estado 36

    termino  ir al estado 69
    factor   ir al estado 39


estado 50

   48 expresion: expresion OP_RESTA . termino

    ID        desplazar e ir al estado 32
    CTE_ENT   desplazar e ir al estado 34
    CTE_REAL  desplazar e ir al estado 35
    P_A       desplazar e ir al estado 36

    termino  ir al estado 70
    factor   ir al estado 39


estado 51

   50 termino: termino OP_MULT . factor

    ID        desplazar e ir al estado 32
    CTE_ENT   desplazar e ir al estado 34
    CTE_REAL  desplazar e ir al estado 35
    P_A       desplazar e ir al estado 36

    factor  ir al estado 71


estado 52

   51 termino: termino OP_DIV . factor

    ID        desplazar e ir al estado 32
    CTE_ENT   desplazar e ir al estado 34
    CTE_REAL  desplazar e ir al estado 35
    P_A       desplazar e ir al estado 36

    factor  ir al estado 72


estado 53

   14 asignacion_m: C_A lista_var C_C OP_ASIG . C_A lista_exp C_C

    C_A  desplazar e ir al estado 73


estado 54

   15 lista_var: lista_var COMA ID .

    $default  reduce usando la regla 15 (lista_var)


estado 55

   25 condicion: ID OP_MAX . CTE_ENT
   26          | ID OP_MAX . ID

    ID       desplazar e ir al estado 74
    CTE_ENT  desplazar e ir al estado 75


estado 56

   29 condicion: ID OP_MAXEQ . CTE_ENT
   30          | ID OP_MAXEQ . ID

    ID       desplazar e ir al estado 76
    CTE_ENT  desplazar e ir al estado 77


estado 57

   27 condicion: ID OP_MIN . CTE_ENT
   28          | ID OP_MIN . ID

    ID       desplazar e ir al estado 78
    CTE_ENT  desplazar e ir al estado 79


estado 58

   31 condicion: ID OP_MINEQ . CTE_ENT
   32          | ID OP_MINEQ . ID

    ID       desplazar e ir al estado 80
    CTE_ENT  desplazar e ir al estado 81


estado 59

   35 condicion: ID OP_NEQ . CTE_ENT
   36          | ID OP_NEQ . ID

    ID       desplazar e ir al estado 82
    CTE_ENT  desplazar e ir al estado 83


estado 60

   33 condicion: ID OP_EQ . CTE_ENT
   34          | ID OP_EQ . ID

    ID       desplazar e ir al estado 84
    CTE_ENT  desplazar e ir al estado 85


estado 61

   37 condicion: NOT ID .

    $default  reduce usando la regla 37 (condicion)


estado 62

   23 decision: IF P_A condicion P_C . L_A sentencia L_C ELSE L_A sentencia L_C
   24         | IF P_A condicion P_C . L_A sentencia L_C

    L_A  desplazar e ir al estado 86


estado 63

   38 condicion: condicion AND . condicion

    ID   desplazar e ir al estado 42
    NOT  desplazar e ir al estado 43

    condicion  ir al estado 87


estado 64

   39 condicion: condicion OR . condicion

    ID   desplazar e ir al estado 42
    NOT  desplazar e ir al estado 43

    condicion  ir al estado 88


estado 65

   38 condicion: condicion . AND condicion
   39          | condicion . OR condicion
   40 iteracion: REPEAT sentencia UNTIL condicion .

    AND  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64

    $default  reduce usando la regla 40 (iteracion)


estado 66

   46 cteNombre: CONST ID EQ CTE_STRING .

    $default  reduce usando la regla 46 (cteNombre)


estado 67

   45 cteNombre: CONST ID EQ CTE_ENT .

    $default  reduce usando la regla 45 (cteNombre)


estado 68

   56 factor: P_A expresion P_C .

    $default  reduce usando la regla 56 (factor)


estado 69

   47 expresion: expresion OP_SUMA termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 51
    OP_DIV   desplazar e ir al estado 52

    $default  reduce usando la regla 47 (expresion)


estado 70

   48 expresion: expresion OP_RESTA termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 51
    OP_DIV   desplazar e ir al estado 52

    $default  reduce usando la regla 48 (expresion)


estado 71

   50 termino: termino OP_MULT factor .

    $default  reduce usando la regla 50 (termino)


estado 72

   51 termino: termino OP_DIV factor .

    $default  reduce usando la regla 51 (termino)


estado 73

   14 asignacion_m: C_A lista_var C_C OP_ASIG C_A . lista_exp C_C

    ID          desplazar e ir al estado 89
    CTE_STRING  desplazar e ir al estado 90
    CTE_ENT     desplazar e ir al estado 91
    CTE_REAL    desplazar e ir al estado 92

    lista_exp  ir al estado 93
    var        ir al estado 94


estado 74

   26 condicion: ID OP_MAX ID .

    $default  reduce usando la regla 26 (condicion)


estado 75

   25 condicion: ID OP_MAX CTE_ENT .

    $default  reduce usando la regla 25 (condicion)


estado 76

   30 condicion: ID OP_MAXEQ ID .

    $default  reduce usando la regla 30 (condicion)


estado 77

   29 condicion: ID OP_MAXEQ CTE_ENT .

    $default  reduce usando la regla 29 (condicion)


estado 78

   28 condicion: ID OP_MIN ID .

    $default  reduce usando la regla 28 (condicion)


estado 79

   27 condicion: ID OP_MIN CTE_ENT .

    $default  reduce usando la regla 27 (condicion)


estado 80

   32 condicion: ID OP_MINEQ ID .

    $default  reduce usando la regla 32 (condicion)


estado 81

   31 condicion: ID OP_MINEQ CTE_ENT .

    $default  reduce usando la regla 31 (condicion)


estado 82

   36 condicion: ID OP_NEQ ID .

    $default  reduce usando la regla 36 (condicion)


estado 83

   35 condicion: ID OP_NEQ CTE_ENT .

    $default  reduce usando la regla 35 (condicion)


estado 84

   34 condicion: ID OP_EQ ID .

    $default  reduce usando la regla 34 (condicion)


estado 85

   33 condicion: ID OP_EQ CTE_ENT .

    $default  reduce usando la regla 33 (condicion)


estado 86

   23 decision: IF P_A condicion P_C L_A . sentencia L_C ELSE L_A sentencia L_C
   24         | IF P_A condicion P_C L_A . sentencia L_C

    ID      desplazar e ir al estado 1
    C_A     desplazar e ir al estado 2
    IF      desplazar e ir al estado 3
    VAR     desplazar e ir al estado 4
    REPEAT  desplazar e ir al estado 5
    PRINT   desplazar e ir al estado 6
    READ    desplazar e ir al estado 7
    CONST   desplazar e ir al estado 8

    sentencia     ir al estado 95
    asignacion_s  ir al estado 12
    asignacion_m  ir al estado 13
    decision      ir al estado 14
    iteracion     ir al estado 15
    printear      ir al estado 16
    obtain        ir al estado 17
    declaracion   ir al estado 18
    cteNombre     ir al estado 19


estado 87

   38 condicion: condicion . AND condicion
   38          | condicion AND condicion .
   39          | condicion . OR condicion

    OR  desplazar e ir al estado 64

    $default  reduce usando la regla 38 (condicion)


estado 88

   38 condicion: condicion . AND condicion
   39          | condicion . OR condicion
   39          | condicion OR condicion .

    $default  reduce usando la regla 39 (condicion)


estado 89

   19 var: ID .

    $default  reduce usando la regla 19 (var)


estado 90

   22 var: CTE_STRING .

    $default  reduce usando la regla 22 (var)


estado 91

   20 var: CTE_ENT .

    $default  reduce usando la regla 20 (var)


estado 92

   21 var: CTE_REAL .

    $default  reduce usando la regla 21 (var)


estado 93

   14 asignacion_m: C_A lista_var C_C OP_ASIG C_A lista_exp . C_C
   17 lista_exp: lista_exp . COMA var

    C_C   desplazar e ir al estado 96
    COMA  desplazar e ir al estado 97


estado 94

   18 lista_exp: var .

    $default  reduce usando la regla 18 (lista_exp)


estado 95

   23 decision: IF P_A condicion P_C L_A sentencia . L_C ELSE L_A sentencia L_C
   24         | IF P_A condicion P_C L_A sentencia . L_C

    L_C  desplazar e ir al estado 98


estado 96

   14 asignacion_m: C_A lista_var C_C OP_ASIG C_A lista_exp C_C .

    $default  reduce usando la regla 14 (asignacion_m)


estado 97

   17 lista_exp: lista_exp COMA . var

    ID          desplazar e ir al estado 89
    CTE_STRING  desplazar e ir al estado 90
    CTE_ENT     desplazar e ir al estado 91
    CTE_REAL    desplazar e ir al estado 92

    var  ir al estado 99


estado 98

   23 decision: IF P_A condicion P_C L_A sentencia L_C . ELSE L_A sentencia L_C
   24         | IF P_A condicion P_C L_A sentencia L_C .

    ELSE  desplazar e ir al estado 100

    $default  reduce usando la regla 24 (decision)


estado 99

   17 lista_exp: lista_exp COMA var .

    $default  reduce usando la regla 17 (lista_exp)


estado 100

   23 decision: IF P_A condicion P_C L_A sentencia L_C ELSE . L_A sentencia L_C

    L_A  desplazar e ir al estado 101


estado 101

   23 decision: IF P_A condicion P_C L_A sentencia L_C ELSE L_A . sentencia L_C

    ID      desplazar e ir al estado 1
    C_A     desplazar e ir al estado 2
    IF      desplazar e ir al estado 3
    VAR     desplazar e ir al estado 4
    REPEAT  desplazar e ir al estado 5
    PRINT   desplazar e ir al estado 6
    READ    desplazar e ir al estado 7
    CONST   desplazar e ir al estado 8

    sentencia     ir al estado 102
    asignacion_s  ir al estado 12
    asignacion_m  ir al estado 13
    decision      ir al estado 14
    iteracion     ir al estado 15
    printear      ir al estado 16
    obtain        ir al estado 17
    declaracion   ir al estado 18
    cteNombre     ir al estado 19


estado 102

   23 decision: IF P_A condicion P_C L_A sentencia L_C ELSE L_A sentencia . L_C

    L_C  desplazar e ir al estado 103


estado 103

   23 decision: IF P_A condicion P_C L_A sentencia L_C ELSE L_A sentencia L_C .

    $default  reduce usando la regla 23 (decision)
